--- a/app/src/main/res/layout/row_devices.xml
+++ b/app/src/main/res/layout/row_devices.xml
@@ -61,6 +61,7 @@
                 android:onClick="onDisconnectButtonClicked"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:text="@string/disconnect_peer_button"
                 />
 
