--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -22,6 +22,25 @@
             android:gravity="center_vertical"
             android:layout_marginBottom="@dimen/activity_vertical_margin">
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/select_ruleset"
+                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin_half" />
+            <Spinner
+                android:id="@+id/ruleset_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_column="1"/>
+        </TableRow>
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <TextView
                 android:id="@+id/deck_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
