--- a/app/src/main/res/layout/fragment_edit_card.xml
+++ b/app/src/main/res/layout/fragment_edit_card.xml
@@ -29,7 +29,7 @@
     </TableRow>
 
     <TableRow
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_width="match_parent">
         <TextView
             android:layout_column="0"
