--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -41,7 +41,7 @@
 
     <android.support.design.widget.FloatingActionButton
         app:srcCompat="@drawable/ic_play_button_24dp"
-        android:id="@+id/new_game"
+        android:id="@+id/start_game_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
