--- a/app/src/main/res/layout/fragment_create_wager.xml
+++ b/app/src/main/res/layout/fragment_create_wager.xml
@@ -25,6 +25,44 @@
             android:inputType="number"
             android:maxLength="8" />
     </TableRow>
+    <TableRow
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_column="0"
+            android:text="@string/note"
+            android:padding="3dip"
+            android:gravity="end"
+            android:layout_width="wrap_content" />
+        <TextView
+            android:id="@+id/wager_text_max"
+            android:text="@string/wager_text_max"
+            android:layout_column="1"
+            android:textSize="@dimen/md_text_size_caption"
+            android:gravity="start"
+            android:padding="3dip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    </TableRow>
+    <TableRow
+        android:layout_height="match_parent"
+        android:layout_width="match_parent">
+        <TextView
+            android:layout_column="0"
+            android:text=""
+            android:padding="3dip"
+            android:gravity="end"
+            android:layout_width="wrap_content" />
+        <TextView
+            android:id="@+id/wager_text_min"
+            android:text="@string/wager_text_min"
+            android:textSize="@dimen/md_text_size_caption"
+            android:layout_column="1"
+            android:gravity="start"
+            android:padding="3dip"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"/>
+    </TableRow>
 
 
 </TableLayout>
