--- a/app/src/main/res/layout/activity_end_of_gameplay.xml
+++ b/app/src/main/res/layout/activity_end_of_gameplay.xml
@@ -1,77 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_end_of_gameplay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seniordesign.wolfpack.quizinator.activities.EndOfGameplayActivity">
 
     <TextView
         android:id="@+id/endOfGameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/game_over"
+        android:text="@string/results"
         android:textStyle="bold"
         android:textSize="32sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+         />
 
-    <LinearLayout
+    <TableLayout
+        android:id="@+id/end_of_gameplay_table"
         android:layout_marginTop="20dp"
         android:layout_below="@id/endOfGameText"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:background="@drawable/rounded_table_layout_shape"
+        android:stretchColumns="1">
 
-        <TextView
-            android:id="@+id/endOfGameScoreText"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/score_label" />
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/score_label" />
+            <TextView
+                android:id="@+id/endOfGameScoreText"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/endOfGameTimeText"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/time_elapsed_label" />
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/time_elapsed_label" />
+            <TextView
+                android:id="@+id/endOfGameTimeText"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/endOfGameTotalCardsText"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="@string/total_cards_label"/>
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/total_cards_label"/>
+            <TextView
+                android:id="@+id/endOfGameTotalCardsText"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/endOfGameHighScoreText"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:text="@string/high_score_label" />
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/high_score_label" />
+            <TextView
+                android:id="@+id/endOfGameHighScoreText"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/endOfGameHighScoreTimeText"
-            android:textAlignment="center"
-            android:layout_width="match_parent"
+        <TableRow
             android:layout_height="wrap_content"
-            android:text="@string/high_score_time_label" />
+            android:layout_width="wrap_content"
+            android:gravity="center_vertical" >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:text="@string/high_score_time_label" />
+            <TextView
+                android:id="@+id/endOfGameHighScoreTimeText"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="1" />
+        </TableRow>
+    </TableLayout>
 
-        <Button
-            android:id="@+id/goToMainMenu"
-            android:layout_marginTop="20dp"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="@string/main_menu"
-            android:onClick="showMainMenu"/>
-    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@drawable/ic_close_black_24dp"
+        android:id="@+id/goToMainMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:onClick="showMainMenu" />
+
 </RelativeLayout>
