--- a/app/src/main/res/drawable/rounded_table_layout_shape.xml
+++ b/app/src/main/res/drawable/rounded_table_layout_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorGrayedOut"/>
+    <solid android:color="@color/colorLightlyGrayedOut"/>
     <corners android:radius="30px"/>
     <padding
         android:left="@dimen/activity_vertical_margin_half"
