--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="layout_border_color">#FF111111</color>
     <color name="question_background">#FFFAFAFA</color>
+
+    <color name="question_icon_TF">#FFFF0000</color>
 </resources>
