--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -64,11 +64,10 @@
                 android:layout_height="0dp"
                 android:layout_marginBottom="10dp">
 
-            <ImageView
+            <com.seniordesign.wolfpack.quizinator.views.CardIcon
                 android:id="@+id/questionCardTypeIcon"
-                android:layout_height="45dp"
-                android:layout_width="45dp"
-                android:layout_gravity="start"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
                 <TextView
                     android:id="@+id/questionTextArea"
