--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -174,12 +174,11 @@
                     android:layout_weight="0.5"
                     android:orientation="vertical">
 
-                    <ImageView
+                    <com.seniordesign.wolfpack.quizinator.views.CardIcon
                         android:id="@+id/current_card_type_icon"
-                        android:layout_width="@dimen/md_icon_width_and_height"
-                        android:layout_height="@dimen/md_icon_width_and_height"
-                        android:scaleType="fitCenter"
-                        android:contentDescription="@string/card_type" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        />
 
                     <TextView
                         android:id="@+id/current_card_points"
