--- a/app/src/main/res/layout/array_adapter_list_of_cards.xml
+++ b/app/src/main/res/layout/array_adapter_list_of_cards.xml
@@ -5,13 +5,10 @@
     android:layout_height="wrap_content"
     android:background="@drawable/array_adapter_rounded_corners">
 
-    <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_weight="0"
-        android:paddingRight="@dimen/array_adapter_padding"
-        android:paddingLeft="@dimen/array_adapter_padding"
-        android:id="@+id/card_type_icon" />
+    <com.seniordesign.wolfpack.quizinator.views.CardIcon
+        android:id="@+id/card_type_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
