--- a/app/src/main/res/layout/array_adapter_list_of_decks.xml
+++ b/app/src/main/res/layout/array_adapter_list_of_decks.xml
@@ -39,13 +39,10 @@
         android:paddingRight="@dimen/array_adapter_padding"
         android:paddingLeft="@dimen/array_adapter_padding">
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_weight="0"
-            android:paddingRight="5dp"
-            android:src="@drawable/mc_icon"
-            android:id="@+id/array_adapter_deck_MC_icon" />
+        <com.seniordesign.wolfpack.quizinator.views.CardIcon
+            android:id="@+id/array_adapter_deck_MC_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -55,13 +52,10 @@
             android:textColor="#000000"
             android:id="@+id/array_adapter_deck_MC_count" />
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_weight="0"
-            android:paddingRight="5dp"
-            android:src="@drawable/tf_icon"
-            android:id="@+id/array_adapter_deck_TF_icon" />
+        <com.seniordesign.wolfpack.quizinator.views.CardIcon
+            android:id="@+id/array_adapter_deck_TF_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -71,13 +65,10 @@
             android:textColor="#000000"
             android:id="@+id/array_adapter_deck_TF_count" />
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_weight="0"
-            android:paddingRight="5dp"
-            android:src="@drawable/fr_icon"
-            android:id="@+id/array_adapter_deck_FR_icon" />
+        <com.seniordesign.wolfpack.quizinator.views.CardIcon
+            android:id="@+id/array_adapter_deck_FR_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -87,13 +78,10 @@
             android:textColor="#000000"
             android:id="@+id/array_adapter_deck_FR_count" />
 
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_weight="0"
-            android:paddingRight="5dp"
-            android:src="@drawable/vr_icon"
-            android:id="@+id/array_adapter_deck_VR_icon" />
+        <com.seniordesign.wolfpack.quizinator.views.CardIcon
+            android:id="@+id/array_adapter_deck_VR_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
