--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -17,6 +17,7 @@
         android:stretchColumns="1">
 
         <TableRow
+            android:id="@+id/ruleset_row"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center_vertical"
