--- a/app/src/main/res/layout/dialog_sharing.xml
+++ b/app/src/main/res/layout/dialog_sharing.xml
@@ -3,11 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
     <EditText
         android:id="@+id/dialog_file_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:maxLength="16"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/dialog_file_extension"
+        android:layout_below="@id/dialog_file_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorLightlyGrayedOut" />
 
 </RelativeLayout>
