--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -17,6 +17,39 @@
             android:id="@+id/nav_show_cards"
             android:title="@string/nav_bar_edit_cards"
             />
+        <item
+            android:title="@string/nav_bar_help">
+
+            <group>
+
+                <item
+                    android:id="@+id/help_singleplayer"
+                    android:title="@string/nav_bar_help_singleplayer"
+                    />
+                <item
+                    android:title="@string/nav_bar_help_multi"
+                    >
+                    <group>
+                        <item
+                            android:id="@+id/help_multi_host"
+                            android:title="@string/nav_bar_help_multi_host"
+                            />
+                        <item
+                            android:id="@+id/help_multi_player"
+                            android:title="@string/nav_bar_help_multi_player"
+                            />
+                    </group>
+                    </item>
+                <item
+                    android:id="@+id/help_custom"
+                    android:title="@string/nav_bar_help_custom"
+                    />
+                <item
+                    android:id="@+id/help_rules"
+                    android:title="@string/nav_bar_help_rules"
+                    />
+            </group>
+        </item>
     </group>
 
 </menu>
