can now import deck files

--- a/app/src/main/res/layout/activity_decks.xml
+++ b/app/src/main/res/layout/activity_decks.xml
@@ -38,5 +38,5 @@
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginEnd="@dimen/fab_margin"
-        android:onClick="newDeckClick" />
+        android:onClick="importDeckClick" />
 </RelativeLayout>
