--- a/app/src/main/res/layout/activity_cards.xml
+++ b/app/src/main/res/layout/activity_cards.xml
@@ -32,6 +32,15 @@
                 <!--android:button="@null"-->
                 <!--android:drawableRight="?android:attr/listChoiceIndicatorMultiple"-->
                 <!--android:text="@string/moderator_needed_filter" />-->
+
+            <Spinner
+                android:id="@+id/card_sort_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:spinnerMode="dropdown"
+                android:entries="@array/card_sort_list"/>
+
         </LinearLayout>
         <ListView
             android:id="@+id/list_of_cards"
