--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="md_text_size_subheading">16sp</dimen>
     <dimen name="md_text_size_body">14sp</dimen>
     <dimen name="md_text_size_caption">12sp</dimen>
+    <dimen name="md_text_view_padding">8dp</dimen>
 
     <dimen name="md_text_size_button">14sp</dimen>
     <dimen name="md_text_size_game_play_button">20sp</dimen>
