--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -1,68 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/activity_edit_deck"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical"
               tools:context="com.seniordesign.wolfpack.quizinator.activities.EditDeckActivity">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:gravity="bottom"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/edit_deck_name"
-            android:layout_weight="0.5"
-            android:textAlignment="center"
-            android:text="@string/deck_name"
-            android:textSize="16sp"
-            android:textColor="#000000"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:maxLines="2"
-            android:maxLength="140"
-            android:inputType="text" />
-        <TextView
-            android:layout_weight="0.5"
-            android:textAlignment="center"
-            android:text="@string/available_cards"
-            android:textSize="16sp"
-            android:textColor="#000000"
+            android:gravity="bottom"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/edit_deck_name"
+                android:layout_weight="0.5"
+                android:textAlignment="center"
+                android:text="@string/deck_name"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="2"
+                android:maxLength="140"
+                android:inputType="text" />
+            <TextView
+                android:layout_weight="0.5"
+                android:textAlignment="center"
+                android:text="@string/available_cards"
+                android:textSize="16sp"
+                android:textColor="#000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_weight="0.8"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:layout_height="0dp">
+
+            <ListView
+                android:id="@+id/cards_in_deck"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="@dimen/array_adapter_padding"
+                android:paddingRight="@dimen/edit_deck_spacing"
+                android:paddingBottom="@dimen/edit_deck_list_bottom_padding"
+                android:clipToPadding="false"/>
+
+            <ListView
+                android:id="@+id/cards_in_database"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="@dimen/array_adapter_padding"
+                android:paddingLeft="@dimen/edit_deck_spacing"
+                android:paddingBottom="@dimen/edit_deck_list_bottom_padding"
+                android:clipToPadding="false"/>
     </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_weight="0.8"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
-        android:layout_height="0dp">
-
-        <ListView
-            android:id="@+id/cards_in_deck"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="@dimen/array_adapter_padding"
-            android:paddingRight="1dp"/>
-
-        <ListView
-            android:id="@+id/cards_in_database"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="@dimen/array_adapter_padding"
-            android:paddingLeft="1dp"/>
-    </LinearLayout>
-
+<!--
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="75dp">
@@ -91,5 +98,28 @@
             android:layout_margin="@dimen/fab_margin"
             android:onClick="onDeleteClick"/>
     </RelativeLayout>
+    -->
+    </LinearLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@drawable/ic_check_white_24dp"
+        android:id="@+id/deck_save_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:onClick="onSaveClick"/>
+
+    <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@drawable/ic_remove_btn_24dp"
+        android:id="@+id/deck_delete_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:onClick="onDeleteClick"/>
+</RelativeLayout>
