--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,7 @@
     <dimen name="card_count_padding">3dp</dimen>
     <dimen name="card_icon_padding">5dp</dimen>
     <dimen name="edit_deck_spacing">1dp</dimen>
-    <dimen name="edit_deck_list_bottom_padding">85dp</dimen>
+    <dimen name="listview_bottom_padding">85dp</dimen>
 
     <!-- Material Design guidelines -->
     <dimen name="md_text_size_headline">24sp</dimen>
