--- a/app/src/main/res/layout/row_devices.xml
+++ b/app/src/main/res/layout/row_devices.xml
@@ -11,7 +11,7 @@
         android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_marginRight="2dip"
+        android:layout_marginRight="2dp"
         android:src="@drawable/machine"
         />
 
